--- a/package.json
+++ b/package.json
@@ -28,14 +28,17 @@
   "devDependencies": {
     "@decky/rollup": "^1.0.1",
     "@decky/ui": "^4.8.1",
+    "@rollup/plugin-node-resolve": "^15.3.0",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@types/webpack": "^5.28.5",
     "rollup": "^4.22.5",
+    "rollup-plugin-postcss": "^4.0.2",
     "typescript": "^5.6.2"
   },
   "dependencies": {
     "@decky/api": "^1.1.2",
+    "@uiw/react-textarea-code-editor": "^3.1.0",
     "devicons-react": "^1.3.0",
     "react-icons": "^5.3.0",
     "tslib": "^2.7.0"
