--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
   },
   "dependencies": {
     "@decky/api": "^1.1.2",
-    "@uiw/react-textarea-code-editor": "^3.1.0",
     "devicons-react": "^1.3.0",
+    "react-code-blocks": "^0.1.6",
     "react-icons": "^5.3.0",
     "tslib": "^2.7.0"
   },
