--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "@decky/api": "^1.1.2",
+    "ansi-to-react": "^6.1.6",
     "devicons-react": "^1.3.0",
     "react-code-blocks": "^0.1.6",
     "react-icons": "^5.3.0",
