--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "devicons-react": "^1.3.0",
     "react-code-blocks": "^0.1.6",
     "react-icons": "^5.3.0",
+    "react-qr-code": "^2.0.15",
     "tslib": "^2.7.0"
   },
   "pnpm": {
